bdr.BDR.scala.error
Compilation error:
BDR:1: error: ')' expected but ',' found.
if (isOverMessage()=="R","L","I","A","B","C","Z","Y","X"){
                        ^BDR:38: error: illegal start of simple expression
	}
        ^